Node version updated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "myapp-react-ecommerce",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
